kubernetes/k3s-hello-mdsanima/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-mdsanima
spec:
  type: LoadBalancer
  selector:
    app: hello-mdsanima
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30001
