kubernetes/k3s-hello-mdsanima/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-mdsanima
  labels:
    name: hello-mdsanima
spec:
  rules:
  - host: mdsanima.dev.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: hello-mdsanima
            port:
              number: 80
